Updated product search

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -122,10 +122,10 @@
                                     <option value="12">Clothing</option>
                                 </select>
                             </div>
-                            <input type="text" class="form-control searchInput" data-url="http://localhost:52606/product/search" id="search" placeholder="Search in..."/>
+                            <input type="text" class="form-control searchInput" data-url="/product/search" id="search" placeholder="Search in..."/>
                             <div class="search-body" style="position: absolute;width: 100%;z-index:999;background-color: white;top: 100%;border: 1px solid black;">
                                     <ul class="list-group">
-                                        
+                                         
                                     </ul>
                             </div>
                             <button class="btn btn-search" type="submit"><i class="w-icon-search"></i>
