--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
                                 </select>
                             </div>
                             <input type="text" class="form-control searchInput" data-url="/product/search" id="search" placeholder="Search in..."/>
-                            <div class="search-body" style="position: absolute;width: 100%;z-index:999;background-color: white;top: 100%;border: 1px solid black;">
+                            <div class="search-body d-none" style="position: absolute;width: 100%;z-index:999;background-color: white;top: 100%;border: 1px solid black;">
                                     <ul class="list-group">
                                          
                                     </ul>
