Updated add to cart action

--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -413,7 +413,7 @@
                                                     00:00:00:00</div>
                                             </div>*@
                                             <div class="product-action-horizontal">
-                                                <a asp-controller="product" asp-action="addToCart" asp-route-id="@product.ID" id="addToCart" class="btn-product-icon btn-cart w-icon-cart"
+                                                <a asp-controller="product" asp-action="AddToCart" asp-route-id="@product.ID" class="AddToCart btn-product-icon btn-cart w-icon-cart"
                                                     title="Add to cart"></a>
                                                 <a href="#" class="btn-product-icon btn-wishlist w-icon-heart"
                                                     title="Wishlist"></a>
