--- a/Views/Shared/_CartPartial.cshtml
+++ b/Views/Shared/_CartPartial.cshtml
@@ -1,5 +1,33 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model List<CartVM>                                   
+ 
+
+     @foreach (CartVM cartVM in Model)
+    {
+        <div class="product product-cart">
+        <div class="product-detail">
+            <a href="product-default.html" class="product-name">@cartVM.Name</a>
+            <div class="price-box">
+                <span class="product-quantity">@(cartVM.Count)x</span>
+                <span class="product-price">$@cartVM.Price</span>
+            </div>
+        </div>
+        <figure class="product-media">
+            <a href="product-default.html">
+                <img src="~/assets/images/cart/product-1.jpg" alt="product" height="84" width="94">
+            </a>
+        </figure>
+        <button class="btn btn-link btn-close" aria-label="button">
+            <i class="fas fa-times"></i>
+        </button>
+    </div>   
+    }   
+    <div class="cart-total">
+        <label>Subtotal:</label>
+        <span class="price">$@(Model.Sum(p=>p.Price) )</span>
+    </div>
+    <div class="cart-action">
+        <a href="cart.html" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
+        <a href="checkout.html" class="btn btn-primary  btn-rounded">Checkout</a>
+    </div>
+
+                                
