--- a/Views/Shared/_CartPartial.cshtml
+++ b/Views/Shared/_CartPartial.cshtml
@@ -1,33 +1,46 @@
-﻿@model List<CartVM>                                   
+﻿@model List<CartVM>  
+<div class="cart-overlay"></div>
+
+    <a href="#" class="cart-toggle label-down link">
+                                <i class="w-icon-cart">
+                                    <span class="cart-count">@Model.Count</span>
+                                </i>
+                                <span class="cart-label">Cart</span>
+                            </a>
+                            <div class="dropdown-box">
+                                <div class="cart-header">
+                                    <span>Shopping Cart</span>
+                                    <a href="#" class="btn-close">Close<i class="w-icon-long-arrow-right"></i></a>
+                                </div>
+                            <div id="product__item-list" class="products">
+                            @foreach (CartVM cartVM in Model)
+                            {
+                                <div class="product product-cart">
+                                <div class="product-detail">
+                                    <a href="product-default.html" class="product-name">@cartVM.Name</a>
+                                    <div class="price-box">
+                                        <span class="product-quantity">@(cartVM.Count)x</span>
+                                        <span class="product-price">$@cartVM.Price</span>
+                                    </div>
+                                </div>
+                                <figure class="product-media">
+                                    <a href="product-default.html">
+                                        <img src="~/assets/images/cart/product-1.jpg" alt="product" height="84" width="94">
+                                    </a>
+                                </figure>
+                                <a asp-controller="cart" asp-action="DeleteCart" asp-route-id="@cartVM.ProductID" id="deleteCart"  class="btn btn-link btn-close" aria-label="button">
+                                    <i class="fas fa-times"></i>
+                                </a>
+                            </div>   
+                            }   
+                            <div class="cart-total">
+                                <label>Subtotal:</label>
+                                <span class="price">$@(Model.Sum(p=>p.Price * p.Count))</span>
+                            </div>
+                            <div class="cart-action">
+                                <a href="cart.html" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
+                                <a href="checkout.html" class="btn btn-primary  btn-rounded">Checkout</a>
+                            </div>
+                            </div>
+                            </div>
  
-
-     @foreach (CartVM cartVM in Model)
-    {
-        <div class="product product-cart">
-        <div class="product-detail">
-            <a href="product-default.html" class="product-name">@cartVM.Name</a>
-            <div class="price-box">
-                <span class="product-quantity">@(cartVM.Count)x</span>
-                <span class="product-price">$@cartVM.Price</span>
-            </div>
-        </div>
-        <figure class="product-media">
-            <a href="product-default.html">
-                <img src="~/assets/images/cart/product-1.jpg" alt="product" height="84" width="94">
-            </a>
-        </figure>
-        <a asp-controller="cart" asp-action="DeleteCart" asp-route-id="@cartVM.ProductID" id="deleteCart"  class="btn btn-link btn-close" aria-label="button">
-            <i class="fas fa-times"></i>
-        </a>
-    </div>   
-    }   
-    <div class="cart-total">
-        <label>Subtotal:</label>
-        <span class="price">$@(Model.Sum(p=>p.Price) )</span>
-    </div>
-    <div class="cart-action">
-        <a href="cart.html" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
-        <a href="checkout.html" class="btn btn-primary  btn-rounded">Checkout</a>
-    </div>
-
-                                
