Updated DB & Setting model

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -758,8 +758,9 @@
                                     'duration': '1s'
                                 }">
                                     <img src="~/assets/images/demos/demo1/sliders/men.png" alt="Banner"
-                                        data-bottom-top="transform: translateX(10vh);"
-                                        data-top-bottom="transform: translateX(-10vh);" width="480" height="633">
+                                     data-bottom-top="transform: translateX(10vh);"
+                                     data-top-bottom="transform: translateX(-10vh);"
+                                     width="480" height="633">
                                 </figure>
                                 <div class="banner-content d-inline-block y-50">
                                     <h5 class="banner-subtitle font-weight-normal text-default ls-50 slide-animate"
