--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Wolmart.Ecommerce.Models
 @using Wolmart.Ecommerce.ViewModels.CartViewModels
+@using Wolmart.Ecommerce.ViewModels.HeaderVM
 
