--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Wolmart.Ecommerce.Models
 @using Wolmart.Ecommerce.ViewModels.CartViewModels
 @using Wolmart.Ecommerce.ViewModels.HeaderVM
+@using Wolmart.Ecommerce.ViewModels.HomeViewModels 
 
