--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,13 @@
-﻿
+﻿@using Wolmart.Ecommerce.Interfaces;
+@model HomeVM
+@inject ILayoutService layoutService
+
+
 @{
-    Layout = null;
-}
+    List<CartVM> cartVMs = await layoutService.GetCart();
+     Layout = null;
+ }
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -111,7 +117,7 @@
                     <div class="header-left mr-md-4">
                         <a href="#" class="mobile-menu-toggle  w-icon-hamburger" aria-label="menu-toggle">
                         </a>
-                        <a href="demo1.html" class="logo ml-lg-0">
+                        <a asp-controller="home" class="logo ml-lg-0">
                             <img src="~/assets/images/logo.png" alt="logo" width="144" height="45" />
                         </a>
                         <form method="get" action="#" class="header-search hs-expanded hs-round d-none d-md-flex input-wrapper">
@@ -153,73 +159,7 @@
                             <span class="compare-label d-lg-show">Compare</span>
                         </a>
                         <div class="dropdown cart-dropdown cart-offcanvas mr-0 mr-lg-2">
-                            <div class="cart-overlay"></div>
-                            <a href="#" class="cart-toggle label-down link">
-                                <i class="w-icon-cart">
-                                    <span class="cart-count">2</span>
-                                </i>
-                                <span class="cart-label">Cart</span>
-                            </a>
-                            <div class="dropdown-box">
-                                <div class="cart-header">
-                                    <span>Shopping Cart</span>
-                                    <a href="#" class="btn-close">Close<i class="w-icon-long-arrow-right"></i></a>
-                                </div>
-
-                                <div class="products">
-                                    <div class="product product-cart">
-                                        <div class="product-detail">
-                                            <a href="product-default.html" class="product-name">Beige knitted
-                                                elas<br>tic
-                                                runner shoes</a>
-                                            <div class="price-box">
-                                                <span class="product-quantity">1</span>
-                                                <span class="product-price">$25.68</span>
-                                            </div>
-                                        </div>
-                                        <figure class="product-media">
-                                            <a href="product-default.html">
-                                                <img src="~/assets/images/cart/product-1.jpg" alt="product" height="84"
-                                                    width="94" />
-                                            </a>
-                                        </figure>
-                                        <button class="btn btn-link btn-close" aria-label="button">
-                                            <i class="fas fa-times"></i>
-                                        </button>
-                                    </div>
-
-                                    <div class="product product-cart">
-                                        <div class="product-detail">
-                                            <a href="product-default.html" class="product-name">Blue utility
-                                                pina<br>fore
-                                                denim dress</a>
-                                            <div class="price-box">
-                                                <span class="product-quantity">1</span>
-                                                <span class="product-price">$32.99</span>
-                                            </div>
-                                        </div>
-                                        <figure class="product-media">
-                                            <a href="product-default.html">
-                                                <img src="~/assets/images/cart/product-2.jpg" alt="product" width="84"
-                                                    height="94" />
-                                            </a>
-                                        </figure>
-                                        <button class="btn btn-link btn-close" aria-label="button">
-                                            <i class="fas fa-times"></i>
-                                        </button>
-                                    </div>
-                                </div>
-
-                                <div class="cart-total">
-                                    <label>Subtotal:</label>
-                                    <span class="price">$58.67</span>
-                                </div>
-
-                                <div class="cart-action">
-                                    <a href="cart.html" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
-                                    <a href="checkout.html" class="btn btn-primary  btn-rounded">Checkout</a>
-                                </div>
-                            </div>
+                              @await Html.PartialAsync("_CartPartial",cartVMs)
                             <!-- End of Dropdown Box -->
                         </div>
                     </div>
@@ -702,7 +642,7 @@
                     }
                 }">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide banner banner-fixed intro-slide intro-slide1"
+                        @*<div class="swiper-slide banner banner-fixed intro-slide intro-slide1"
                             style="background-image: url(~/assets/images/demos/demo1/sliders/slide-1.jpg); background-color: #ebeef2;">
                             <div class="container">
                                 <figure class="slide-image skrollable slide-animate">
@@ -748,16 +688,17 @@
                             </div>
                             <!-- End of .container -->
                         </div>
-                        <!-- End of .intro-slide1 -->
+                        <!-- End of .intro-slide1 -->*@
 
-                        <div class="swiper-slide banner banner-fixed intro-slide intro-slide2"
-                            style="background-image: url(~/assets/images/demos/demo1/sliders/slide-2.jpg); background-color: #ebeef2;">
+                        @foreach(Slider item in Model.Sliders){
+                            <div class="swiper-slide banner banner-fixed intro-slide intro-slide2"
+                            style="background-image: url(~/assets/images/demos/demo1/sliders/@item.BackgroundImage); background-color: #ebeef2;">
                             <div class="container">
                                 <figure class="slide-image skrollable slide-animate" data-animation-options="{
                                     'name': 'fadeInUpShorter',
                                     'duration': '1s'
                                 }">
-                                    <img src="~/assets/images/demos/demo1/sliders/men.png" alt="Banner"
+                                    <img src="~/assets/images/demos/demo1/sliders/@item.Image" alt="Banner"
                                      data-bottom-top="transform: translateX(10vh);"
                                      data-top-bottom="transform: translateX(-10vh);"
                                      width="480" height="633">
@@ -769,7 +710,7 @@
                                         'duration': '1s',
                                         'delay': '.2s'
                                     }">
-                                        Mountain-<span class="text-secondary">Climbing</span>
+                                        @Html.Raw(item.MainTitle);
                                     </h5>
                                     <h3 class="banner-title font-weight-bolder text-dark mb-0 ls-25 slide-animate"
                                         data-animation-options="{
@@ -777,16 +718,16 @@
                                         'duration': '1s',
                                         'delay': '.4s'
                                     }">
-                                        Hot & Packback
+                                        @item.SubTitle
                                     </h3>
                                     <p class="font-weight-normal text-default slide-animate" data-animation-options="{
                                         'name': 'fadeInUpShorter',
                                         'duration': '1s',
                                         'delay': '.8s'
                                     }">
-                                        Only until the end of this week.
+                                        @item.Description
                                     </p>
-                                    <a href="shop-banner-sidebar.html"
+                                    <a href="@item.RedirectURL"
                                         class="btn btn-dark btn-outline btn-rounded btn-icon-right slide-animate"
                                         data-animation-options="{
                                         'name': 'fadeInUpShorter',
@@ -800,9 +741,12 @@
                             </div>
                             <!-- End of .container -->
                         </div>
+                        };
+
+
                         <!-- End of .intro-slide2 -->
 
-                        <div class="swiper-slide banner banner-fixed intro-slide intro-slide3"
+                        @*<div class="swiper-slide banner banner-fixed intro-slide intro-slide3"
                             style="background-image: url(~/assets/images/demos/demo1/sliders/slide-3.jpg); background-color: #f0f1f2;">
                             <div class="container">
                                 <figure class="slide-image skrollable slide-animate" data-animation-options="{
@@ -851,7 +795,7 @@
                                 <!-- End of .container -->
                             </div>
                         </div>
-                        <!-- End of .intro-slide3 -->
+                        <!-- End of .intro-slide3 -->*@
                     </div>
                     <div class="swiper-pagination"></div>
                     <button class="swiper-button-next"></button>
@@ -5496,6 +5440,7 @@
 
     <!-- Main JS -->
     <script src="~/assets/js/main.min.js"></script>
+    <script src="~/assets/js/script.js"></script>
 <script>(function(){var js = "window['__CF$cv$params']={r:'7cac67d53fdd5284',m:'G0rxBn.U8MTvHSLVxOFgqpMMKfDOEWNVro8xNtLpioA-1684667769-0-AWaME4Plfh1hWk/EcVoDvLSbxK/5HnS4AM3mpJTQFtJM',u:'/cdn-cgi/challenge-platform/h/g'};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='../../cdn-cgi/challenge-platform/h/g/scripts/jsd/7fe8adc8/invisible.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.nonce = '';_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script></body>
 
 </html>
