All view components have been shortened further

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 @{
-    List<CartVM> cartVMs = await layoutService.GetCart();
+     List<CartVM> cartVMs = await layoutService.GetCart();
      Layout = null;
  }
 
@@ -51,7 +51,7 @@
     <link rel="stylesheet" type="text/css" href="~/assets/vendor/fontawesome-free/css/all.min.css">
 
     <!-- Plugins CSS -->
-    <!-- <link rel="stylesheet" href="~/assets/vendor/swiper/swiper-bundle.min.css"> -->
+    <link rel="stylesheet" href="~/assets/vendor/swiper/swiper-bundle.min.css"> 
     <link rel="stylesheet" type="text/css" href="~/assets/vendor/animate/animate.min.css">
     <link rel="stylesheet" type="text/css" href="~/assets/vendor/magnific-popup/magnific-popup.min.css">
     <!-- Link Swiper's CSS -->
@@ -641,162 +641,7 @@
                         'disableOnInteraction': false
                     }
                 }">
-                    <div class="swiper-wrapper">
-                        @*<div class="swiper-slide banner banner-fixed intro-slide intro-slide1"
-                            style="background-image: url(~/assets/images/demos/demo1/sliders/slide-1.jpg); background-color: #ebeef2;">
-                            <div class="container">
-                                <figure class="slide-image skrollable slide-animate">
-                                    <img src="~/assets/images/demos/demo1/sliders/shoes.png" alt="Banner"
-                                        data-bottom-top="transform: translateY(10vh);"
-                                        data-top-bottom="transform: translateY(-10vh);" width="474" height="397">
-                                </figure>
-                                <div class="banner-content y-50 text-right">
-                                    <h5 class="banner-subtitle font-weight-normal text-default ls-50 lh-1 mb-2 slide-animate"
-                                        data-animation-options="{
-                                    'name': 'fadeInRightShorter',
-                                    'duration': '1s',
-                                    'delay': '.2s'
-                                }">
-                                        Custom <span class="p-relative d-inline-block">Men’s</span>
-                                    </h5>
-                                    <h3 class="banner-title font-weight-bolder ls-25 lh-1 slide-animate"
-                                        data-animation-options="{
-                                    'name': 'fadeInRightShorter',
-                                    'duration': '1s',
-                                    'delay': '.4s'
-                                }">
-                                        RUNNING SHOES
-                                    </h3>
-                                    <p class="font-weight-normal text-default slide-animate" data-animation-options="{
-                                    'name': 'fadeInRightShorter',
-                                    'duration': '1s',
-                                    'delay': '.6s'
-                                }">
-                                        Sale up to <span class="font-weight-bolder text-secondary">30% OFF</span>
-                                    </p>
-
-                                    <a href="shop-list.html"
-                                        class="btn btn-dark btn-outline btn-rounded btn-icon-right slide-animate"
-                                        data-animation-options="{
-                                    'name': 'fadeInRightShorter',
-                                    'duration': '1s',
-                                    'delay': '.8s'
-                                }">SHOP NOW<i class="w-icon-long-arrow-right"></i></a>
-
-                                </div>
-                                <!-- End of .banner-content -->
-                            </div>
-                            <!-- End of .container -->
-                        </div>
-                        <!-- End of .intro-slide1 -->*@
-
-                        @foreach(Slider item in Model.Sliders){
-                            <div class="swiper-slide banner banner-fixed intro-slide intro-slide2"
-                            style="background-image: url(~/assets/images/demos/demo1/sliders/@item.BackgroundImage); background-color: #ebeef2;">
-                            <div class="container">
-                                <figure class="slide-image skrollable slide-animate" data-animation-options="{
-                                    'name': 'fadeInUpShorter',
-                                    'duration': '1s'
-                                }">
-                                    <img src="~/assets/images/demos/demo1/sliders/@item.Image" alt="Banner"
-                                     data-bottom-top="transform: translateX(10vh);"
-                                     data-top-bottom="transform: translateX(-10vh);"
-                                     width="480" height="633">
-                                </figure>
-                                <div class="banner-content d-inline-block y-50">
-                                    <h5 class="banner-subtitle font-weight-normal text-default ls-50 slide-animate"
-                                        data-animation-options="{
-                                        'name': 'fadeInUpShorter',
-                                        'duration': '1s',
-                                        'delay': '.2s'
-                                    }">
-                                        @Html.Raw(item.MainTitle);
-                                    </h5>
-                                    <h3 class="banner-title font-weight-bolder text-dark mb-0 ls-25 slide-animate"
-                                        data-animation-options="{
-                                        'name': 'fadeInUpShorter',
-                                        'duration': '1s',
-                                        'delay': '.4s'
-                                    }">
-                                        @item.SubTitle
-                                    </h3>
-                                    <p class="font-weight-normal text-default slide-animate" data-animation-options="{
-                                        'name': 'fadeInUpShorter',
-                                        'duration': '1s',
-                                        'delay': '.8s'
-                                    }">
-                                        @item.Description
-                                    </p>
-                                    <a href="@item.RedirectURL"
-                                        class="btn btn-dark btn-outline btn-rounded btn-icon-right slide-animate"
-                                        data-animation-options="{
-                                        'name': 'fadeInUpShorter',
-                                        'duration': '1s',
-                                        'delay': '1s'
-                                    }">
-                                        SHOP NOW<i class="w-icon-long-arrow-right"></i>
-                                    </a>
-                                </div>
-                                <!-- End of .banner-content -->
-                            </div>
-                            <!-- End of .container -->
-                        </div>
-                        };
-
-
-                        <!-- End of .intro-slide2 -->
-
-                        @*<div class="swiper-slide banner banner-fixed intro-slide intro-slide3"
-                            style="background-image: url(~/assets/images/demos/demo1/sliders/slide-3.jpg); background-color: #f0f1f2;">
-                            <div class="container">
-                                <figure class="slide-image skrollable slide-animate" data-animation-options="{
-                                    'name': 'fadeInDownShorter',
-                                    'duration': '1s'
-                                }">
-                                    <img src="~/assets/images/demos/demo1/sliders/skate.png" alt="Banner"
-                                        data-bottom-top="transform: translateY(10vh);"
-                                        data-top-bottom="transform: translateY(-10vh);" width="310" height="444">
-                                </figure>
-                                <div class="banner-content text-right y-50">
-                                    <p class="font-weight-normal text-default text-uppercase mb-0 slide-animate"
-                                        data-animation-options="{
-                                        'name': 'fadeInLeftShorter',
-                                        'duration': '1s',
-                                        'delay': '.6s'
-                                    }">
-                                        Top weekly Seller
-                                    </p>
-                                    <h5 class="banner-subtitle font-weight-normal text-default ls-25 slide-animate"
-                                        data-animation-options="{
-                                        'name': 'fadeInLeftShorter',
-                                        'duration': '1s',
-                                        'delay': '.4s'
-                                    }">
-                                        Trending Collection
-                                    </h5>
-                                    <h3 class="banner-title p-relative font-weight-bolder ls-50 slide-animate"
-                                        data-animation-options="{
-                                        'name': 'fadeInLeftShorter',
-                                        'duration': '1s',
-                                        'delay': '.2s'
-                                    }"><span class="text-white mr-4">Roller</span>-skate
-                                    </h3>
-                                    <div class="btn-group slide-animate" data-animation-options="{
-                                        'name': 'fadeInLeftShorter',
-                                        'duration': '1s',
-                                        'delay': '.8s'
-                                    }">
-                                        <a href="shop-list.html"
-                                            class="btn btn-dark btn-outline btn-rounded btn-icon-right">SHOP
-                                            NOW<i class="w-icon-long-arrow-right"></i></a>
-                                    </div>
-                                    <!-- End of .banner-content -->
-                                </div>
-                                <!-- End of .container -->
-                            </div>
-                        </div>
-                        <!-- End of .intro-slide3 -->*@
-                    </div>
+                   @await Component.InvokeAsync("Slider",Model.Sliders)
                     <div class="swiper-pagination"></div>
                     <button class="swiper-button-next"></button>
                     <button class="swiper-button-prev"></button>
