--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
     <div class="page-wrapper">
         <h1 class="d-none">Wolmart - Responsive Marketplace HTML Template</h1>
         <!-- Start of Header -->
-        @await Component.InvokeAsync("Header")
+        @await Component.InvokeAsync("Header",settings)
         <!-- End of Header -->
         @RenderBody();
         <!-- Start of Footer -->
