--- a/Views/Shared/_CartPartial.cshtml
+++ b/Views/Shared/_CartPartial.cshtml
@@ -18,14 +18,14 @@
                             {
                                 <div class="product product-cart">
                                 <div class="product-detail">
-                                    <a href="product-default.html" class="product-name">@cartVM.Name</a>
+                                    <a asp-controller="product" asp-action="detail" asp-route-id="@cartVM.ProductID" class="product-name">@cartVM.Name</a>
                                     <div class="price-box">
                                         <span class="product-quantity">@(cartVM.Count)x</span>
                                         <span class="product-price">$@cartVM.Price</span>
                                     </div>
                                 </div>
                                 <figure class="product-media">
-                                    <a href="product-default.html">
+                                    <a asp-controller="product" asp-action="detail" asp-route-id="@cartVM.ProductID">
                                         <img src="~/assets/images/shop/@cartVM.Image" alt="product" height="84" width="94">
                                     </a>
                                 </figure>
