--- a/Views/Shared/_HomeProductPartial.cshtml
+++ b/Views/Shared/_HomeProductPartial.cshtml
@@ -13,7 +13,7 @@
                                                 width="300" height="338" />
                                         </a>
                                         <div class="product-action-vertical">
-                                            <a href="#" class="btn-product-icon btn-cart w-icon-cart"
+                                            <a asp-controller="cart" asp-action="addtocart" asp-route-id="@product.ID" class="btn-product-icon btn-cart w-icon-cart"
                                                 title="Add to cart"></a>
                                             <a href="#" class="btn-product-icon btn-wishlist w-icon-heart"
                                                 title="Add to wishlist"></a>
