Created brand controller for admin area

--- a/Areas/admin/Views/Product/Index.cshtml
+++ b/Areas/admin/Views/Product/Index.cshtml
@@ -16,9 +16,7 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Name</th>
     </tr>
   </thead>
   <tbody>
