--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@
     <!-- Core css -->
     <link href="~/admin/assets/css/app.min.css" rel="stylesheet">
     <link href="~/admin/assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/brands.min.css" integrity="sha512-9YHSK59/rjvhtDcY/b+4rdnl0V4LPDWdkKceBl8ZLF5TB6745ml1AfluEU6dFWqwDw9lPvnauxFgpKvJqp7jiQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -231,6 +234,12 @@
                         <a asp-controller="product" asp-action="index">
                             <i class="feather icon-mail"></i>
                             <span class="nav-menu-item-title">Product</span>
+                        </a>
+                    </li>
+                    <li class="nav-menu-item">
+                        <a asp-controller="brand" asp-action="index">
+                            <i class="feather icon-mail"></i>
+                            <span class="nav-menu-item-title">Brand</span>
                         </a>
                     </li>
                     <li class="nav-menu-item">
